<resources>
    <string name="app_name">+Comfort</string>
    <string name="button1">Button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="profiles_header">My Profile</string>
    <string name="room_header">General Info</string>
    <string name="params_header">Parameters</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="warning">Warning</string>
    <string name="inactive_time">Inactive Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="clothing">Clothing Level</string>
    <string name="met">Metabolic Rate</string>
    <string name="image">image</string>
    <string name="settings">General Settings</string>
    <string name="notification">Feedback notifications</string>
    <string name="new_platform">New Platform</string>
    <string name="new_platform_description">Enter your platform ID</string>
    <string name="platformIDerror"><u>Platform ID not valid.</u></string>
    <string name="existingErr"><u>Already registered!</u></string>
    <string name="new_name_description">Enter platform name</string>
    <string name="new_location_description">Enter your location</string>
    <string name="new_room">New Room</string>
    <string name="new_room_description">Enter room name</string>
    <string name="register"><u>Click here to register.</u></string>
</resources>